[gd_scene load_steps=7 format=3 uid="uid://d2odr3jayaich"]

[ext_resource type="Script" path="res://Entities/Enemy/Enemy.gd" id="1_3cxro"]
[ext_resource type="Texture2D" uid="uid://btjbfqytox3d2" path="res://Sprites/Characters/Enemies/Basic/Basic256x256.png" id="2_f2pbb"]
[ext_resource type="Texture2D" uid="uid://cqq1ir1pgg75q" path="res://Sprites/Circles/128x128-DottedCircle.png" id="3_vfoqi"]
[ext_resource type="PackedScene" uid="uid://bvke1fhsiyvft" path="res://Entities/Health/HealthBar.tscn" id="4_kxxbm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o6l61"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hdjo8"]
radius = 128.0

[node name="Enemy" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 15
motion_mode = 1
script = ExtResource("1_3cxro")
enemy_type = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CircleShape2D_o6l61")

[node name="CharacterSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_f2pbb")

[node name="Vision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_hdjo8")

[node name="VisionCircle" type="Sprite2D" parent="Vision"]
visible = false
texture = ExtResource("3_vfoqi")

[node name="Healthbar" parent="." instance=ExtResource("4_kxxbm")]
visible = false
offset_top = -56.0
offset_bottom = -24.0

[node name="AttackRangeRayCast" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, 0)
collision_mask = 6

[node name="AttackDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="timeout" from="AttackDelayTimer" to="." method="_on_attack_delay_timer_timeout"]
